<resources>
    <string name="package_name">nl.sightguide.sightguide</string>

    <string name="app_name">Sight Guide</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>



    <string name="search_button">Search city</string>
    <string name="search_input">Search city</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_language">Select your language</string>
    <string name="test">Test</string>
    <string name="title_activity_select_markers">SelectMarkers</string>

    <string name="title_activity_home">Home</string>
    <string name="menu_item_markers">Tourist attraction</string>

    <string name="action_select_city">Select new city</string>
    <string name="title_activity_splash">Splash</string>

    <string name="title_activity_attractions">Tourist attractions</string>
    <string name="title_activity_attraction_list">...</string>

    <string name="title_activity_attraction">Attraction</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_zoeken">Search</string>

    <string name="listen_audio">Listen to audio</string>

    <string name="routes">Walking Routes</string>
    <string name="route">Walking Route</string>
    <string name="start_tour">Start Tour</string>
    <string name="distance">Distance</string>
    <string name="kilometer">Km</string>
    <string name="view_route">View route</string>

    <string-array name="menu_array">

        <item id="1">Attractions</item>
        <item id="2">Walking routes</item>
        <item id="3">City information</item>
        <item id="4">My cities</item>
        <item id="5">Settings</item>
    </string-array>
    <string name="title_activity_empty">Empty</string>

    <string name="title_activity_city_info">City information</string>
    <string name="drawer_open">0</string>
    <string name="drawer_close">1</string>


    <!-- Settings -->
    <string name="title_activity_setting_list">Settings</string>
    <string name="set_filters">Set filters</string>
    <string name="set_filters_desc">Select which markers appear on the map</string>

    <string name="set_city">Select city</string>
    <string name="set_language">Select language</string>
    <string name="proximity_sensor">Proximity sensor</string>
    <string name="proximity_desc">Automatically play audio of nearby attractions</string>
    <string name="autoplay">Autoplay</string>
    <string name="autoplay_desc">Autoplay walking routes</string>

    <!-- My cities -->
    <string name="title_activity_city_list">My cities</string>

    <!-- Marker filter -->
    <string name="title_activity_filter_list">Set Filters</string>
</resources>
