<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="#FFF">
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="60dp">
            <RelativeLayout
                android:id="@+id/mapHolder"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:id="@+id/map" />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mapHolder"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/relativeLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/routeName"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/distance"
                    android:id="@+id/distanceText"
                    android:layout_below="@+id/routeName"
                    android:layout_alignLeft="@+id/routeName"
                    android:layout_alignStart="@+id/routeName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/distance"
                    android:layout_below="@+id/routeName"
                    android:layout_toRightOf="@+id/distanceText"
                    android:layout_toEndOf="@+id/distanceText"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/kilometer"
                    android:id="@+id/textView6"
                    android:layout_below="@+id/routeName"
                    android:layout_toRightOf="@+id/distance"
                    android:layout_toEndOf="@+id/distance" />

            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/infoText"
                android:textIsSelectable="true"
                android:layout_below="@+id/relativeLayout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:singleLine="false"
                android:text="No description" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/mapHolder"
                android:layout_marginBottom="-26dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_directions_run_white_24dp"
                android:onClick="startTour"
                app:backgroundTint="@color/ColorPrimary">

            </android.support.design.widget.FloatingActionButton>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_route"
                android:id="@+id/button2"
                android:background="@color/ColorPrimary"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:onClick="viewRoute"
                android:layout_below="@+id/infoText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="20dp" />

        </RelativeLayout>



    </ScrollView>


</RelativeLayout>